k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
