k8s/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: istio-system
  labels:
    app: grafana
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: istio-system
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:7.3.6
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /etc/grafana/provisioning/
        - name: storage-volume
          mountPath: /var/lib/grafana
      volumes:
      - name: config-volume
        configMap:
          name: grafana
      - name: storage-volume
        emptyDir: {}
