k8s/jaeger-query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  namespace: istio-system
spec:
  type: NodePort
  ports:
    - port: 16686
      nodePort: 30080
  selector:
    app: jaeger
