k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /items
    route:
    - destination:
        host: server-service
        port:
          number: 8000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client-service
        port:
          number: 80
